fixing the images alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
+body {
+max-width:1068px;
+}
+
+
 .search{
 display:flex;
 flex-direction :row;
 justify-content:center;
 margin-top:20px;
 margin-bottom:20px;	
-width:100%;
+max-width:1032px;
 }
 
 .search input{
@@ -14,14 +19,16 @@ width:200%;
 .images{
 display:flex;
 flex-direction :column;
-justify-content:center:
+justify-content:center;
 align-content:space-between;
+max-width:1032px;
 }
 
 .row-1 {
 display:flex;
+flex-wrap:wrap;
 flex-direction :row;
-justify-content:space-around;
+justify-content:space-evenly;
 margin-bottom:50px;	
 }
 
@@ -29,16 +36,18 @@ margin-bottom:50px;
 
 .row-2 {
 display:flex;
+flex-wrap:wrap;
 flex-direction :row;
-justify-content:space-around;
+justify-content:space-evenly;
 align-content:space-between;
 margin-bottom:50px;	
 }
 
 .row-3 {
 display:flex;
+flex-wrap:wrap;
 flex-direction :row;
-justify-content:space-around;
+justify-content:space-evenly;
 align-content:space-between;
 margin-bottom:50px;	
 }
